# omnifinal

./: README.md
omnifinal/: CMakeLists.txt  package.xml
omnifinal/config/: controller.yaml  joint_names_omnifinal.yaml  omnifinal.rviz
omnifinal/launch/: omnifinal.launch  rviz.launch
omnifinal/meshes/: arm_link1.STL  arm_link2.STL  base_link.STL  bl_link.STL  br_link.STL  fl_link.STL  fr_link.STL
omnifinal/src/: keyboard_arm_control.cpp  keyboard_teleop.cpp
omnifinal/urdf/: omnifinal.csv  omnifinal.gazebo  omnifinal.xacro
