<?xml version="1.0"?>
<package format="2">
  <name>omnifinal</name>
  <version>1.0.0</version>
  <description>
    The omnifinal package
    <p>URDF Description package for omnifinal</p>
    <p>This package contains configuration data, 3D models and launch files
for omnifinal robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>